WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201444
[macOS] Unable to open local file from favorites bar
https://bugs.webkit.org/show_bug.cgi?id=201444
Summary
[macOS] Unable to open local file from favorites bar
Per Arne Vollan
Reported
2019-09-03 20:22:13 PDT
The sandbox extension handle should be created providing the pid of the receiving process.
Attachments
Patch
(1.69 KB, patch)
2019-09-03 20:24 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2019-09-03 20:24:48 PDT
Created
attachment 377951
[details]
Patch
Brent Fulgham
Comment 2
2019-09-03 20:26:40 PDT
Comment on
attachment 377951
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=377951&action=review
r=me
> Source/WebKit/UIProcess/WebPageProxy.cpp:1068 > + if (SandboxExtension::createHandleForReadByPid(resourceDirectoryURL.fileSystemPath(), process.processIdentifier(), sandboxExtensionHandle)) {
Yikes! How did we miss this path?
Per Arne Vollan
Comment 3
2019-09-03 20:30:53 PDT
(In reply to Brent Fulgham from
comment #2
)
> Comment on
attachment 377951
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=377951&action=review
> > r=me > > > Source/WebKit/UIProcess/WebPageProxy.cpp:1068 > > + if (SandboxExtension::createHandleForReadByPid(resourceDirectoryURL.fileSystemPath(), process.processIdentifier(), sandboxExtensionHandle)) { > > Yikes! How did we miss this path?
I originally thought only the explicit references to "/" needed replacement, but also this one needs replacement. It actually resolves to "/" as well. Thanks for reviewing!
WebKit Commit Bot
Comment 4
2019-09-03 21:11:14 PDT
Comment on
attachment 377951
[details]
Patch Clearing flags on attachment: 377951 Committed
r249454
: <
https://trac.webkit.org/changeset/249454
>
WebKit Commit Bot
Comment 5
2019-09-03 21:11:15 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-09-03 21:12:17 PDT
<
rdar://problem/55005268
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug